--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -55,3 +55,24 @@
   .countdownButton:hover {
     background: var(--blue-dark);
   }
+
+  .countdownButtonActive{
+    background: var(--white);
+    color: var(--title);
+  }
+
+  .countdownButtonActive:hover{
+    background: var(--red);
+    color: var(--white); 
+  }
+
+  .countdownButtonActive:not(:disabled):hover {
+    background: var(--red);
+    color: var(--white)
+  }
+  
+  .countdownButton:disabled {
+    background: var(--white);
+    color: var(--text);
+    cursor: not-allowed;
+  }
